# tink-py

./: .bazelrc  BUILD.bazel  MANIFEST.in  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements.txt  requirements_all.txt  requirements_awskms.in  requirements_gcpkms.in  requirements_hcvault.in  setup.py  tink_py_deps.bzl  tink_py_deps_init.bzl
examples/: .bazelrc  MODULE.bazel  WORKSPACE  requirements.in  requirements.txt
examples/aead/: BUILD.bazel  README.md  aead_basic_test.py
examples/cleartext_keyset/: BUILD.bazel  README.md
examples/deterministic_aead/: BUILD.bazel  README.md  deterministic_aead_basic_test.py
examples/encrypted_keyset/: BUILD.bazel  README.md  encrypted_keyset_cli.py
examples/envelope_aead/: BUILD.bazel  README.md
examples/gcs/: BUILD.bazel  README.md  gcs_envelope_aead_cli.py  gcs_envelope_aead_cli_test.sh
examples/hybrid/: BUILD.bazel  README.md  hybrid.py  hybrid_basic_test.py
examples/jwt/: BUILD.bazel  README.md  jwt_generate_public_jwk_set.py  jwt_sign.py  jwt_verify.py
examples/mac/: BUILD.bazel  README.md  mac.py  mac_basic_test.py
examples/signature/: BUILD.bazel  README.md  signature.py  signature_basic_test.py
examples/streaming_aead/: BUILD.bazel  README.md  streaming_aead.py
examples/testdata/: README.md
examples/testdata/aws/: README.md
examples/walkthrough/: create_keyset_test.py  load_cleartext_keyset_test.py  load_encrypted_keyset_test.py  obtain_and_use_a_primitive_test.py  write_cleartext_keyset_test.py  write_keyset_test.py
kokoro/: create_github_release_branch.sh  create_github_release_tag.sh  release_on_pypi.sh  release_requirements.txt
kokoro/gcp_ubuntu/bazel/: run_tests.sh  test_script.sh
kokoro/gcp_ubuntu/pip/: run_tests.sh  test_script.sh
kokoro/gcp_ubuntu/release/: run_tests.sh
kokoro/gcp_windows/bazel/: run_tests.bat
kokoro/gcp_windows/pip/: run_tests.bat
kokoro/macos_external/bazel/: run_tests.sh
kokoro/macos_external/bazel_kms/: run_tests.sh
kokoro/macos_external/pip/: run_tests.sh
kokoro/macos_external/pip_kms/: run_tests.sh
kokoro/testutils/: fetch_git_repo_if_not_present.sh  install_protoc.sh  install_vault.sh  py_test_container_images.sh  replace_http_archive_with_local_repository.py
tink/: BUILD.bazel  _keyset_handle.py  _keyset_handle_test.py  _keyset_reader.py  _keyset_reader_test.py  _keyset_writer.py  _keyset_writer_test.py  _monitoring.py  cleartext_keyset_handle.py
tink/aead/: BUILD.bazel  _aead_key_manager.py  _aead_key_manager_test.py  _aead_key_templates.py  _aead_key_templates_test.py  _aead_wrapper.py  _aead_wrapper_test.py  _kms_envelope_aead.py  _kms_envelope_aead_test.py
tink/cc/: BUILD.bazel  cc_hpke_config.cc  cc_hpke_config.h  cc_jwt_config.cc  cc_jwt_config.h  cc_key_manager.h  cc_streaming_aead_wrappers.cc  cc_streaming_aead_wrappers.h  cc_streaming_aead_wrappers_test.cc  cc_tink_config.cc  input_stream_adapter.cc  input_stream_adapter.h  input_stream_adapter_test.cc  output_stream_adapter.cc  output_stream_adapter.h  output_stream_adapter_test.cc  python_file_object_adapter.h  python_input_stream.cc  python_input_stream.h  python_input_stream_test.cc  python_output_stream.cc  python_output_stream.h  python_output_stream_test.cc  test_util.h
tink/cc/pybind/: BUILD.bazel  aead.cc  cc_hpke_config.cc  cc_jwt_config.cc  cc_key_manager_test.py  cc_streaming_aead_wrappers.cc  deterministic_aead.cc  hybrid_decrypt.cc  hybrid_encrypt.cc  input_stream_adapter.cc  mac.cc  output_stream_adapter.cc  prf.cc  public_key_sign.cc  public_key_verify.cc  python_file_object_adapter.cc  tink_bindings.cc  tink_exception.h
tink/core/: BUILD.bazel  __init__.py  _crypto_format.py  _crypto_format_test.py  _key_manager.py  _primitive_set.py  _primitive_set_test.py  _primitive_wrapper.py  _registry.py  _registry_test.py
tink/daead/: BUILD.bazel  _deterministic_aead_key_manager_test.py  _deterministic_aead_key_templates.py  _deterministic_aead_key_templates_test.py  _deterministic_aead_wrapper.py  _deterministic_aead_wrapper_test.py
tink/hybrid/: BUILD.bazel  _hybrid_key_manager_test.py  _hybrid_key_templates.py  _hybrid_key_templates_test.py  _hybrid_wrapper.py  _hybrid_wrapper_test.py
tink/integration/gcpkms/: BUILD.bazel  __init__.py  _gcp_kms_aead_test.py  _gcp_kms_client.py  _gcp_kms_client_integration_test.py  _gcp_kms_client_test.py  _gcp_kms_mac.py  _gcp_kms_mac_test.py  _gcp_kms_public_key_sign.py  _gcp_kms_public_key_sign_test.py  _gcp_kms_util.py
tink/jwt/: BUILD.bazel  _json_util_test.py  _jwk_set_converter.py  _jwk_set_converter_test.py  _jwt_format.py  _jwt_format_test.py  _jwt_hmac_key_manager.py  _jwt_hmac_key_manager_test.py  _jwt_key_templates.py  _jwt_mac_wrapper.py  _jwt_mac_wrapper_test.py  _jwt_signature_key_manager.py  _jwt_signature_key_manager_test.py  _jwt_signature_wrappers.py  _jwt_signature_wrappers_test.py
tink/mac/: BUILD.bazel  _mac_key_manager_test.py  _mac_key_templates.py  _mac_key_templates_test.py  _mac_wrapper.py  _mac_wrapper_test.py
tink/prf/: BUILD.bazel  _prf_key_manager_test.py  _prf_key_templates.py
tink/proto/: BUILD.bazel  aes_ctr_hmac_streaming.proto  aes_gcm_hkdf_streaming.proto  composite_ml_dsa.proto  ecdsa.proto  ecies_aead_hkdf.proto  hkdf_prf.proto  hmac.proto  hmac_prf.proto
tink/signature/: BUILD.bazel  _signature_key_manager.py  _signature_key_manager_test.py  _signature_key_templates.py  _signature_wrapper.py  _signature_wrapper_test.py
tink/streaming_aead/: BUILD.bazel  _decrypting_stream.py  _encrypting_stream.py  _file_object_adapter.py  _file_object_adapter_test.py  _streaming_aead_key_manager_test.py  _streaming_aead_key_templates.py  _streaming_aead_key_templates_test.py  _streaming_aead_wrapper.py  _streaming_aead_wrapper_test.py
tink/testing/: BUILD.bazel  bytes_io.py  bytes_io_test.py  fake_key_usage_monitor.py  helper.py  keyset_builder.py  keyset_builder_test.py
tools/distribution/: build_linux_binary_wheels.sh  create_bdist.sh  create_release.sh  create_sdist.sh  requirements.in  requirements.txt  test_dist.sh  test_linux_binary_wheel.sh
(+17 files in other folders)
