module(
    name = "tink_py",
    version = "1.13.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "1.4.0")
bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "tink_cc", version = "2.4.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "pybind11_bazel", version = "3.0.0")
bazel_dep(name = "protobuf", version = "30.1")
bazel_dep(name = "platforms", version = "1.0.0")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "google_root_pem",
    urls = ["https://pki.goog/roots.pem"],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.9")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)
python.toolchain(python_version = "3.11")
python.toolchain(python_version = "3.12")
python.toolchain(python_version = "3.13")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "tink_py_pip_deps",
    python_version = "3.9",
    requirements_lock = "@tink_py//:requirements_all.txt",
)
pip.parse(
    hub_name = "tink_py_pip_deps",
    python_version = "3.10",
    requirements_lock = "@tink_py//:requirements_all.txt",
)
pip.parse(
    hub_name = "tink_py_pip_deps",
    python_version = "3.11",
    requirements_lock = "@tink_py//:requirements_all.txt",
)
pip.parse(
    hub_name = "tink_py_pip_deps",
    python_version = "3.12",
    requirements_lock = "@tink_py//:requirements_all.txt",
)
pip.parse(
    hub_name = "tink_py_pip_deps",
    python_version = "3.13",
    requirements_lock = "@tink_py//:requirements_all.txt",
)
use_repo(pip, "tink_py_pip_deps")
