module(name = "tink_py_examples")

bazel_dep(name = "rules_python", version = "1.4.0")
bazel_dep(name = "tink_py", version = "2.4.0")
local_path_override(
    module_name = "tink_py",
    path = "..",
)

# TODO(b/487603705): Remove this override once Tink v2.6.0 is available in
# https://registry.bazel.build/.
git_override(
    module_name = "tink_cc",
    commit = "f47507eb5f4f5ac3f446270e10df196f02c5c007",
    remote = "https://github.com/tink-crypto/tink-cc",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "google_root_pem",
    urls = ["https://pki.goog/roots.pem"],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.9",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.9",
    requirements_lock = "@tink_py_examples//:requirements.txt",
)
use_repo(pip, "pip_deps")
