module(name = "tink_py_examples")

bazel_dep(name = "rules_python", version = "2.0.1")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "tink_py", version = "")
local_path_override(
    module_name = "tink_py",
    path = "..",
)

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "google_root_pem",
    urls = ["https://pki.goog/roots.pem"],
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip_deps",
    python_version = "3.10",
    requirements_lock = "@tink_py_examples//:requirements.txt",
)
use_repo(pip, "pip_deps")
