load("@pybind11_bazel//:build_defs.bzl", "pybind_library")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

cc_library(
    name = "cc_key_manager",
    hdrs = ["cc_key_manager.h"],
    include_prefix = "tink/cc",
    deps = [
        "//tink/cc/pybind:tink_exception",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:tink_cc",
    ],
)

pybind_library(
    name = "cc_tink_config",
    srcs = ["cc_tink_config.cc"],
    hdrs = ["cc_tink_config.h"],
    deps = [
        "//tink/cc/pybind:tink_exception",
        "@abseil-cpp//absl/status",
        "@tink_cc//tink:tink_cc",
        "@tink_cc//tink/config:tink_config",
    ],
)

cc_library(
    name = "cc_jwt_config",
    srcs = ["cc_jwt_config.cc"],
    hdrs = ["cc_jwt_config.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@tink_cc//tink:tink_cc",
        "@tink_cc//tink/jwt/internal:raw_jwt_ecdsa_sign_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_ecdsa_verify_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_hmac_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_rsa_ssa_pkcs1_sign_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_rsa_ssa_pkcs1_verify_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_rsa_ssa_pss_sign_key_manager",
        "@tink_cc//tink/jwt/internal:raw_jwt_rsa_ssa_pss_verify_key_manager",
    ],
)

cc_library(
    name = "cc_hpke_config",
    srcs = ["cc_hpke_config.cc"],
    hdrs = ["cc_hpke_config.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@tink_cc//tink/hybrid:hpke_config",
    ],
)

cc_library(
    name = "python_file_object_adapter",
    hdrs = ["python_file_object_adapter.h"],
    include_prefix = "tink/cc",
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "python_output_stream",
    srcs = ["python_output_stream.cc"],
    hdrs = ["python_output_stream.h"],
    include_prefix = "tink/cc",
    deps = [
        ":python_file_object_adapter",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:output_stream",
        "@tink_cc//tink/subtle:subtle_util",
    ],
)

cc_test(
    name = "python_output_stream_test",
    size = "medium",
    srcs = ["python_output_stream_test.cc"],
    deps = [
        ":python_output_stream",
        ":test_util",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@tink_cc//tink/subtle:random",
    ],
)

cc_library(
    name = "output_stream_adapter",
    srcs = ["output_stream_adapter.cc"],
    hdrs = ["output_stream_adapter.h"],
    include_prefix = "tink/cc",
    deps = [
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:output_stream",
    ],
)

cc_test(
    name = "output_stream_adapter_test",
    size = "small",
    srcs = ["output_stream_adapter_test.cc"],
    deps = [
        ":output_stream_adapter",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@tink_cc//tink:output_stream",
        "@tink_cc//tink/subtle:random",
        "@tink_cc//tink/util:ostream_output_stream",
    ],
)

cc_library(
    name = "test_util",
    hdrs = ["test_util.h"],
    include_prefix = "tink/cc",
    deps = [
        ":python_file_object_adapter",
        "@abseil-cpp//absl/base:core_headers",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
        "@tink_cc//tink:streaming_aead",
    ],
)

cc_library(
    name = "cc_streaming_aead_wrappers",
    srcs = ["cc_streaming_aead_wrappers.cc"],
    hdrs = ["cc_streaming_aead_wrappers.h"],
    include_prefix = "tink/cc",
    deps = [
        ":input_stream_adapter",
        ":output_stream_adapter",
        ":python_file_object_adapter",
        ":python_input_stream",
        ":python_output_stream",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:input_stream",
        "@tink_cc//tink:output_stream",
        "@tink_cc//tink:streaming_aead",
    ],
)

cc_test(
    name = "cc_streaming_aead_wrappers_test",
    size = "small",
    srcs = ["cc_streaming_aead_wrappers_test.cc"],
    deps = [
        ":cc_streaming_aead_wrappers",
        ":test_util",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "python_input_stream",
    srcs = ["python_input_stream.cc"],
    hdrs = ["python_input_stream.h"],
    include_prefix = "tink/cc",
    deps = [
        ":python_file_object_adapter",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:input_stream",
        "@tink_cc//tink/subtle:subtle_util",
    ],
)

cc_test(
    name = "python_input_stream_test",
    size = "medium",
    srcs = ["python_input_stream_test.cc"],
    deps = [
        ":python_input_stream",
        ":test_util",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@tink_cc//tink/subtle:random",
    ],
)

cc_library(
    name = "input_stream_adapter",
    srcs = ["input_stream_adapter.cc"],
    hdrs = ["input_stream_adapter.h"],
    include_prefix = "tink/cc",
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@tink_cc//tink:input_stream",
    ],
)

cc_test(
    name = "input_stream_adapter_test",
    size = "small",
    srcs = ["input_stream_adapter_test.cc"],
    deps = [
        ":input_stream_adapter",
        "@abseil-cpp//absl/memory",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@tink_cc//tink/subtle:random",
        "@tink_cc//tink/util:istream_input_stream",
    ],
)
