load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@com_google_protobuf//bazel:py_proto_library.bzl", "py_proto_library")

package(default_visibility = ["//:__subpackages__"])

licenses(["notice"])

proto_library(
    name = "common_proto",
    srcs = ["common.proto"],
)

py_proto_library(
    name = "common_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":common_proto"],
)

proto_library(
    name = "tink_proto",
    srcs = [
        "tink.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [":common_proto"],
)

py_proto_library(
    name = "tink_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":tink_proto"],
)

proto_library(
    name = "config_proto",
    srcs = [
        "config.proto",
    ],
)

py_proto_library(
    name = "config_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":config_proto"],
)

proto_library(
    name = "aes_siv_proto",
    srcs = [
        "aes_siv.proto",
    ],
)

py_proto_library(
    name = "aes_siv_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_siv_proto"],
)

proto_library(
    name = "ecdsa_proto",
    srcs = [
        "ecdsa.proto",
    ],
    deps = [":common_proto"],
)

py_proto_library(
    name = "ecdsa_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":ecdsa_proto"],
)

proto_library(
    name = "rsa_ssa_pss_proto",
    srcs = [
        "rsa_ssa_pss.proto",
    ],
    deps = [":common_proto"],
)

py_proto_library(
    name = "rsa_ssa_pss_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":rsa_ssa_pss_proto"],
)

proto_library(
    name = "rsa_ssa_pkcs1_proto",
    srcs = [
        "rsa_ssa_pkcs1.proto",
    ],
    deps = [":common_proto"],
)

py_proto_library(
    name = "rsa_ssa_pkcs1_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":rsa_ssa_pkcs1_proto"],
)

proto_library(
    name = "jwt_rsa_ssa_pss_proto",
    srcs = [
        "jwt_rsa_ssa_pss.proto",
    ],
)

py_proto_library(
    name = "jwt_rsa_ssa_pss_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":jwt_rsa_ssa_pss_proto"],
)

proto_library(
    name = "jwt_rsa_ssa_pkcs1_proto",
    srcs = [
        "jwt_rsa_ssa_pkcs1.proto",
    ],
)

py_proto_library(
    name = "jwt_rsa_ssa_pkcs1_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":jwt_rsa_ssa_pkcs1_proto"],
)

proto_library(
    name = "jwt_ecdsa_proto",
    srcs = [
        "jwt_ecdsa.proto",
    ],
)

py_proto_library(
    name = "jwt_ecdsa_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":jwt_ecdsa_proto"],
)

proto_library(
    name = "ed25519_proto",
    srcs = [
        "ed25519.proto",
    ],
)

py_proto_library(
    name = "ed25519_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":ed25519_proto"],
)

proto_library(
    name = "aes_cmac_proto",
    srcs = [
        "aes_cmac.proto",
    ],
)

py_proto_library(
    name = "aes_cmac_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_cmac_proto"],
)

proto_library(
    name = "hmac_proto",
    srcs = [
        "hmac.proto",
    ],
    deps = [":common_proto"],
)

py_proto_library(
    name = "hmac_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":hmac_proto"],
)

proto_library(
    name = "jwt_hmac_proto",
    srcs = [
        "jwt_hmac.proto",
    ],
)

py_proto_library(
    name = "jwt_hmac_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":jwt_hmac_proto"],
)

proto_library(
    name = "aes_ctr_proto",
    srcs = [
        "aes_ctr.proto",
    ],
)

py_proto_library(
    name = "aes_ctr_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_ctr_proto"],
)

proto_library(
    name = "aes_ctr_hmac_aead_proto",
    srcs = [
        "aes_ctr_hmac_aead.proto",
    ],
    deps = [
        ":aes_ctr_proto",
        ":hmac_proto",
    ],
)

py_proto_library(
    name = "aes_ctr_hmac_aead_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_ctr_hmac_aead_proto"],
)

proto_library(
    name = "aes_gcm_proto",
    srcs = [
        "aes_gcm.proto",
    ],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "aes_gcm_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_gcm_proto"],
)

proto_library(
    name = "aes_gcm_siv_proto",
    srcs = [
        "aes_gcm_siv.proto",
    ],
)

py_proto_library(
    name = "aes_gcm_siv_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_gcm_siv_proto"],
)

proto_library(
    name = "aes_ctr_hmac_streaming",
    srcs = ["aes_ctr_hmac_streaming.proto"],
    deps = [
        ":common_proto",
        ":hmac_proto",
    ],
)

py_proto_library(
    name = "aes_ctr_hmac_streaming_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_ctr_hmac_streaming"],
)

proto_library(
    name = "aes_gcm_hkdf_streaming",
    srcs = ["aes_gcm_hkdf_streaming.proto"],
    deps = [":common_proto"],
)

py_proto_library(
    name = "aes_gcm_hkdf_streaming_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_gcm_hkdf_streaming"],
)

proto_library(
    name = "aes_eax_proto",
    srcs = [
        "aes_eax.proto",
    ],
)

py_proto_library(
    name = "aes_eax_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_eax_proto"],
)

proto_library(
    name = "chacha20_poly1305_proto",
    srcs = [
        "chacha20_poly1305.proto",
    ],
)

py_proto_library(
    name = "chacha20_poly1305_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":chacha20_poly1305_proto"],
)

proto_library(
    name = "kms_aead",
    srcs = [
        "kms_aead.proto",
    ],
)

py_proto_library(
    name = "kms_aead_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":kms_aead"],
)

proto_library(
    name = "kms_envelope",
    srcs = [
        "kms_envelope.proto",
    ],
    deps = [":tink_proto"],
)

py_proto_library(
    name = "kms_envelope_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":kms_envelope"],
)

proto_library(
    name = "ecies_aead_hkdf_proto",
    srcs = [
        "ecies_aead_hkdf.proto",
    ],
    deps = [
        ":common_proto",
        ":tink_proto",
    ],
)

py_proto_library(
    name = "ecies_aead_hkdf_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":ecies_aead_hkdf_proto"],
)

proto_library(
    name = "xchacha20_poly1305_proto",
    srcs = [
        "xchacha20_poly1305.proto",
    ],
)

py_proto_library(
    name = "xchacha20_poly1305_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":xchacha20_poly1305_proto"],
)

proto_library(
    name = "aes_cmac_prf_proto",
    srcs = ["aes_cmac_prf.proto"],
)

py_proto_library(
    name = "aes_cmac_prf_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":aes_cmac_prf_proto"],
)

proto_library(
    name = "hmac_prf_proto",
    srcs = ["hmac_prf.proto"],
    deps = [":common_proto"],
)

py_proto_library(
    name = "hmac_prf_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":hmac_prf_proto"],
)

proto_library(
    name = "hkdf_prf_proto",
    srcs = ["hkdf_prf.proto"],
    deps = [":common_proto"],
)

py_proto_library(
    name = "hkdf_prf_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":hkdf_prf_proto"],
)

proto_library(
    name = "hpke_proto",
    srcs = ["hpke.proto"],
)

py_proto_library(
    name = "hpke_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":hpke_proto"],
)

proto_library(
    name = "prf_based_deriver_proto",
    srcs = ["prf_based_deriver.proto"],
    deps = [":tink_proto"],
)

py_proto_library(
    name = "prf_based_deriver_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":prf_based_deriver_proto"],
)

proto_library(
    name = "x_aes_gcm_proto",
    srcs = ["x_aes_gcm.proto"],
)

py_proto_library(
    name = "x_aes_gcm_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":x_aes_gcm_proto"],
)

proto_library(
    name = "ml_dsa_proto",
    srcs = ["ml_dsa.proto"],
)

py_proto_library(
    name = "ml_dsa_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":ml_dsa_proto"],
)

proto_library(
    name = "slh_dsa_proto",
    srcs = ["slh_dsa.proto"],
)

py_proto_library(
    name = "slh_dsa_py_pb2",
    visibility = ["//visibility:public"],
    deps = [":slh_dsa_proto"],
)
